--- a/index.html
+++ b/index.html
@@ -629,24 +629,12 @@
             <p>LiDAR System Setup</p>
         </div>
         <div class="gallery-item">
-            <img src="images/gallery2.jpg" alt="Project 2">
+            <img src="lidar_poster.jpg" alt="Project 2">
             <p>Exoskeleton Sensors</p>
         </div>
         <div class="gallery-item">
-            <img src="images/gallery3.jpg" alt="Project 3">
+            <img src="exo_boot.png" alt="Project 3">
             <p>CAD Design Work</p>
-        </div>
-        <div class="gallery-item">
-            <img src="images/gallery4.jpg" alt="Project 4">
-            <p>FPV Drone Build</p>
-        </div>
-        <div class="gallery-item">
-            <img src="images/gallery5.jpg" alt="Project 5">
-            <p>3D Printed Parts</p>
-        </div>
-        <div class="gallery-item">
-            <img src="images/gallery6.jpg" alt="Project 6">
-            <p>Research Presentation</p>
         </div>
     </div>
 </section>
