--- a/index.html
+++ b/index.html
@@ -626,8 +626,8 @@
     <div class="gallery-grid">
 <div class="gallery-item">
     <img src="lidar_poster.jpg" alt="Project 1" style="
-        width: 100%;
-        height: 300px;
+        width: 50%;
+        height: 50%;
         object-fit: cover;
     ">
     <p>LIDAR Poster</p>
