--- a/index.html
+++ b/index.html
@@ -620,14 +620,18 @@
             </div>
         </div>
     </section>
+    <!--Gallery-->
 <!-- Gallery Section -->
 <section id="gallery">
     <h2>Project Gallery</h2>
     <div class="gallery-grid">
-        <div class="gallery-item">
-            <img src="lidar_poster.jpg" alt="LIDAR Poster">
-            <p>LIDAR Poster</p>
-        </div>
+    <img src="lidar_poster.jpg" alt="Project 1" style="
+        width: 75%;
+        height: 75%;
+        object-fit: cover;
+    ">
+    <p>LIDAR Poster</p>
+</div>
         <div class="gallery-item">
             <img src="exo_boot.png" alt="Exoskeleton Boot">
             <p>Sensor Control for Exoskeleton Boot</p>
