--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <style>
         :root {
             --primary: #1a1a1a;
-            --secondary: #2a2a2a;
-            --accent: #00d4ff;
-            --accent-warm: #ff6b35;
-            --text: #e8eaf6;
-            --text-dim: #9094a8;
+            --secondary: #1a1a1a;
+            --accent: #ffffff;
+            --accent-warm: #ffffff;
+            --text: #ffffff;
+            --text-dim: #ffffff;
             
             /* Section-specific colors - grey to black gradient */
-            --bg-about: linear-gradient(180deg, #4a4a4a 0%, #3a3a3a 100%);
-            --bg-projects: linear-gradient(180deg, #3a3a3a 0%, #2a2a2a 100%);
-            --bg-resume: linear-gradient(180deg, #2a2a2a 0%, #0a0a0a 100%);
-            --bg-contact: linear-gradient(180deg, #0a0a0a 0%, #000000 100%);
+            --bg-about: linear-gradient(180deg, #000000 0%, #000000 100%);
+            --bg-projects: linear-gradient(180deg, #000000 0%, #000000 100%);
+            --bg-resume: linear-gradient(180deg, #000000 0%, #000000 100%);
+            --bg-contact: linear-gradient(180deg, #000000 0%, #000000 100%);
         }
 
         * {
